--- a/src/component/css/style.css
+++ b/src/component/css/style.css
@@ -25,4 +25,25 @@
 .color-h1{
     color: rgb(99, 207, 246);
 }
+.grid-left{
+    margin-top: 40px;
+}
+.progressbar{
+	position: relative;
+	overflow: hidden;
+	width: 350px;
+	height: 35px;
+	border-radius: 5px;
+	background-color: #eee;
+}
 
+.progressPercent{
+	font-weight: 600;
+	font-family:'Franklin Gothic Medium';
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	color: #eee;
+	text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+}
