--- a/src/component/css/style.css
+++ b/src/component/css/style.css
@@ -47,3 +47,58 @@
 	color: #eee;
 	text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
 }
+
+.input-wrapper{
+	width: 90%;
+	height: 3.5rem;
+	border: 2px solid #52d0ef;
+	border-radius: 25px;
+	margin-left: 28px;
+	box-shadow: 0px 0px 8px #ddd;
+	background-color: rgb(227,232,243);
+	display: flex;
+	align-items: center;
+}
+
+.input-outline{
+	background-color: transparent;
+	border: none;
+	border-radius: 25px 0 0 25px;
+	height: 100%;
+	font-size: 1.25rem;
+	width: 85%;
+	padding: 10px;
+}
+
+.input-outline:focus{
+	outline: none;
+}
+#search-icon{
+	color:royalblue;
+	font-size: 30px;
+}
+
+/* Card Inform */
+.wrapper{
+	display: inline;
+	margin-top: 100px;
+	width: 100%;
+	margin: 150px;
+}
+
+.main-content{
+	margin:1.5rem;
+	display: flex;
+}
+.box-item{
+	width: 25%;
+	float: left;
+	padding-right: 15px;
+	padding-left: 15px;
+	
+}
+.block-item-1{
+	background: #52d0ef;
+	min-height: 200px;
+	box-shadow: 0 2px 5px 5px #fff;
+}
