--- a/src/component/css/style.css
+++ b/src/component/css/style.css
@@ -23,7 +23,7 @@
     background-color: #f6f6f6;
   }
 .color-h1{
-    color: rgb(99, 207, 246);
+    color: #ffffff;
 }
 .grid-left{
     margin-top: 40px;
@@ -51,10 +51,8 @@
 .input-wrapper{
 	width: 90%;
 	height: 3.5rem;
-	border: 2px solid #52d0ef;
 	border-radius: 25px;
 	margin-left: 28px;
-	box-shadow: 0px 0px 8px #ddd;
 	background-color: rgb(227,232,243);
 	display: flex;
 	align-items: center;
@@ -62,6 +60,7 @@
 
 .input-outline{
 	background-color: transparent;
+	color: #474747;
 	border: none;
 	border-radius: 25px 0 0 25px;
 	height: 100%;
@@ -106,6 +105,22 @@
 .result-layout{
 	animation: mymove 5s infinite;
 }
+
+.ParallaxVideo {
+	height: 300px;
+}
+
+.ParallaxVideo video {
+	object-fit: cover;
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+
+
 @keyframes mymove {
 	50% {box-shadow: 10px 20px 25px rgba(16,186,72,0.4);}
 }
